--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -44,17 +44,22 @@ CFLAGS =        -Wall -Wextra -Werror
 
 all:            ${NAME}
 
-${NAME}:        ${OBJS}
-				ar rc ${NAME} ${OBJS}
+$(NAME):
+	@$(CC) $(CFLAGS) -c $(SRCS)
+	@ar -rc $(NAME) $(OBJS)
+	@echo "Compiled $(NAME) & .o."
+
 
 .c.o:
-	cc $(CFLAGS) -c $^
+	cc ${CF} -c $^ -include ${HEADER}
 
 clean:
-				rm -rf ${OBJS}
+	@rm -f $(OBJS_BONUS) $(OBJS) 
+	@echo "Deleted .o files."
 
-fclean:         clean
-				rm -rf ${NAME}
+fclean: clean
+	@rm -f $(NAME)
+	@echo "Deleted $(NAME)."
 
 re:             fclean all
 
